--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-TOKEN=""		# put here your token
+TOKEN=""		# put here your telegram token
 MONGO_CON=""	# put here your mongodb connection string
 ADMIN=		    # admin telegram ID (int)
